# asteroids

./: .gitignore  CMakeLists.txt  README.md
src/: game.h  graphics.h  layer.h  main.cpp  network.h  neuron.h
